content/v1.4/Using Randomness/vrf-contracts.md
---
layout: nodes.liquid
title: "Contract Addresses"
slug: "vrf-contracts"
hidden: false
metadata: 
  title: "Chainlink VRF Contract Addresses"
  image: 
    0: "https://files.readme.io/95f26ed-670379d-OpenGraph_V3.png"
    1: "670379d-OpenGraph_V3.png"
    2: 1459
    3: 1459
    4: "#dbe1f8"
date: Last Modified
---
Chainlink VRF allows you to integrate provably-fair and verifiably random data in your smart contract. 

For implementation details, read [Introduction to Chainlink VRF](doc:chainlink-vrf).

# Mainnet
[block:callout]
{
  "type": "info",
  "body": "For early access to Chainlink VRF on mainnet please reach out to [vrf@chain.link](mailto:vrf@chain.link).",
  "title": "Early Access"
}
[/block]
# Kovan

|Item|Value|
|---|---|
|LINK|`0xa36085f69e2889c224210f603d836748e7dc0088`|
|VRF Coordinator|`0xdD3782915140c8f3b190B5D67eAc6dc5760C46E9 `|
|Key Hash|`0x6c3699283bda56ad74f6b855546325b68d482e983852a7a82979cc4807b641f4 `|
|Fee|0.1 LINK|

# Rinkeby

|Item|Value|
|---|---|
|LINK|`0x01be23585060835e02b77ef475b0cc51aa1e0709`|
|VRF Coordinator|`0xb3dCcb4Cf7a26f6cf6B120Cf5A73875B7BBc655B `|
|Key Hash|`0x2ed0feb3e7fd2022120aa84fab1945545a9f2ffc9076fd6156fa96eaff4c1311 `|
|Fee|0.1 LINK|