content/v1.6/Using Randomness/vrf-contracts.md
---
title: "Contract Addresses"
slug: "vrf-contracts"
hidden: false
metadata: 
  title: "Chainlink VRF Contract Addresses"
  image: 
    0: "https://files.readme.io/95f26ed-670379d-OpenGraph_V3.png"
    1: "670379d-OpenGraph_V3.png"
    2: 1459
    3: 1459
    4: "#dbe1f8"
createdAt: "2020-05-19T00:35:17.606Z"
updatedAt: "2021-02-25T19:52:50.052Z"
---
Chainlink VRF allows you to integrate provably-fair and verifiably random data in your smart contract. 

For implementation details, read [Introduction to Chainlink VRF](doc:chainlink-vrf).

# Polygon (Matic) Mainnet
[block:callout]
{
  "type": "success",
  "title": "Early Access",
  "body": "VRF on Polygon is currently in early access mode. If you wish to use VRF on Polygon, please contact us at [vrf@chain.link](mailto:vrf@chain.link)."
}
[/block]
# Polygon (Matic) Mumbai Testnet

|Item|Value|
|---|---|
|LINK Token|`0x326C977E6efc84E512bB9C30f76E30c160eD06FB`|
|VRF Coordinator|`0x8C7382F9D8f56b33781fE506E897a4F1e2d17255`|
|Key Hash|`0x6e75b569a01ef56d18cab6a8e71e6600d6ce853834d4a5748b720d06f878b3a4`|
|Fee|0.0001 LINK|

# Ethereum Mainnet
[block:callout]
{
  "type": "success",
  "body": "For the most efficient consumption of Chainlink VRF on Ethereum, please contact us at [vrf@chain.link](mailto:vrf@chain.link) to create a payment channel, through which we can provide VRF to you at the cost of Ethereum network gas fees. You will only be paying for the gas costs incurred by the Chainlink node from calling your smart contract.",
  "title": "Early Access"
}
[/block]
# Kovan

|Item|Value|
|---|---|
|LINK|`0xa36085f69e2889c224210f603d836748e7dc0088`|
|VRF Coordinator|`0xdD3782915140c8f3b190B5D67eAc6dc5760C46E9 `|
|Key Hash|`0x6c3699283bda56ad74f6b855546325b68d482e983852a7a82979cc4807b641f4 `|
|Fee|0.1 LINK|

# Rinkeby

|Item|Value|
|---|---|
|LINK|`0x01be23585060835e02b77ef475b0cc51aa1e0709`|
|VRF Coordinator|`0xb3dCcb4Cf7a26f6cf6B120Cf5A73875B7BBc655B `|
|Key Hash|`0x2ed0feb3e7fd2022120aa84fab1945545a9f2ffc9076fd6156fa96eaff4c1311 `|
|Fee|0.1 LINK|